--- a/deployment/minimum-prom-scrape-config.yaml
+++ b/deployment/minimum-prom-scrape-config.yaml
@@ -7,6 +7,18 @@ data:
       scrape_timeout: 5s
     scrape_configs:
     - job_name: 'sriov-metrics'
+      kubernetes_sd_configs:
+      - role: endpoints
+      relabel_configs:
+      - source_labels: [__meta_kubernetes_endpoint_node_name]
+        target_label: instance
+      - source_labels: [__meta_kubernetes_service_annotation_prometheus_io_target]
+        action: keep
+        regex: true
+      static_configs:
+      - targets: ['sriov-metrics-exporter.monitoring.svc.cluster.local']
+      scheme: http
+    - job_name: 'sriov-metrics-standalone'
       scheme: http
       kubernetes_sd_configs:
       - role: node
