Adding filepath cleaning and utils pkg

--- a/deployment/daemonset.yaml
+++ b/deployment/daemonset.yaml
@@ -70,7 +70,7 @@ spec:
           type: "Socket"
         name: kubeletsocket
       - hostPath:
-          path: /sys/fs/cgroup/cpuset/kubepods/
+          path: /sys/fs/cgroup/cpuset/kubepods.slice/
           type: "Directory"
         name: kubecgroup
       - hostPath:
