--- a/.github/workflows/build-test-lint.yml
+++ b/.github/workflows/build-test-lint.yml
@@ -7,7 +7,7 @@ jobs:
       matrix:
         go-version: [1.17.x, 1.18.x, 1.19.x]
         goarch: [amd64]
-        os: [self-hosted]
+        os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Set up Go matrix
@@ -25,7 +25,7 @@ jobs:
         run: make build
 
   test:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     needs: build
     name: test
     steps:
@@ -44,7 +44,7 @@ jobs:
         run: make test
 
   test-coverage:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     needs: build
     name: test-coverage
     steps:
@@ -69,7 +69,7 @@ jobs:
 
   golangci:
     name: Golangci-lint
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Set up Go
         uses: actions/setup-go@v3
@@ -83,7 +83,7 @@ jobs:
           version: v1.46.2
 
   hadolint:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     name: Hadolint
     steps:
     - uses: actions/checkout@v2
@@ -94,7 +94,7 @@ jobs:
        ignore: DL3018 # DL3018: GH issue 368
 
   go-check:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
 
