--- a/.github/workflows/build-test-lint.yml
+++ b/.github/workflows/build-test-lint.yml
@@ -24,6 +24,20 @@ jobs:
           GOOS: ${{ matrix.goos }}
         run: make build
 
+  build-image:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v4
+
+      - name: Build and push container image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: false
+          file: ./Dockerfile
+
+
   test:
     runs-on: ubuntu-latest
     needs: build
