--- a/.github/workflows/image-push-release.yml
+++ b/.github/workflows/image-push-release.yml
@@ -1,8 +1,14 @@
 name: "Push images on release"
+
+env:
+  IMAGE_NAME: ghcr.io/${{ github.repository }}
+  BUILD_PLATFORMS: linux/amd64,linux/arm64,linux/ppc64le
+
 on:
   push:
     tags:
       - v*
+
 jobs:
   build-and-push-image:
     runs-on: ubuntu-latest
@@ -11,6 +17,14 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v4
+
+      # Add support for more platforms with QEMU (optional)
+      # https://github.com/docker/setup-qemu-action
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Login to Docker
         uses: docker/login-action@v3
@@ -24,13 +38,16 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.IMAGE_NAME }}
-          tag-latest: false
+          flavor: |
+            latest=false
 
       - name: Build and push container image
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
+          platforms: ${{ env.BUILD_PLATFORMS }}
           tags: |
             ${{ steps.docker_meta.outputs.tags }}
+          labels: ${{ steps.docker_meta.outputs.labels }}
           file: ./Dockerfile
