--- a/deployment/daemonset.yaml
+++ b/deployment/daemonset.yaml
@@ -40,6 +40,7 @@ spec:
         - --path.kubeletsocket=/host/kubelet.sock
         - --collector.kubepoddevice=true
         - --collector.vfstatspriority=sysfs,netlink
+        - --path.supported-drivers-version-db=/etc/sriov-network-metrics-exporter/drivers.yaml
         image: localhost:5000/sriov-metrics-exporter
         imagePullPolicy: Always 
         name: sriov-metrics-exporter
