--- a/deployment/daemonset.yaml
+++ b/deployment/daemonset.yaml
@@ -27,7 +27,7 @@ spec:
         - --path.kubeletsocket=/host/kubelet.sock
         - --collector.kubepoddevice=true
         - --collector.vfstatspriority=sysfs,netlink
-        image: localhost:5000/sriov-metrics-exporter
+        image: ghcr.io/k8snetworkplumbingwg/sriov-network-metrics-exporter:latest
         imagePullPolicy: Always 
         name: sriov-metrics-exporter
         resources:
@@ -61,8 +61,6 @@ spec:
         - mountPath: /host/cpu_manager_state
           name: cpucheckpoint
           readOnly: true
-        - name: sriov-network-metrics-exporter
-          mountPath: /etc/sriov-network-metrics-exporter
       nodeSelector:
         kubernetes.io/os: linux
         feature.node.kubernetes.io/network-sriov.capable: "true"
@@ -94,9 +92,6 @@ spec:
           path: /sys/devices
           type: "Directory"
         name: sysdevices
-      - name: sriov-network-metrics-exporter
-        configMap:
-          name: sriov-network-metrics-exporter
 ---
 apiVersion: v1
 kind: Service
